// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ZFooterList component renders a ZFooterList when the component is mounted 1`] = `
<ul class="px-6 md:px-4 lg:px-6">
  <!----> <span class="block"><!----> <span class="text-vanilla-300"></span></span>
</ul>
`;

exports[`ZFooterList component renders a ZFooterList when type is accordion 1`] = `
<ul class="px-6 md:px-4 lg:px-6"><span class="flex items-center cursor-pointer inline-block hover:opacity-75 select-none font-medium tracking-wider w-full leading-3 py-4 md:pt-0 uppercase text-sm text-vanilla-800"><span class="flex flex-1">Dummy title</span> <svg viewBox="0 0 24 24" stroke-linecap="round" stroke-linejoin="round" fill="none" class="stroke-1.5 transform z-icon w-6 h-6 z-icon--chevron-right text-vanilla-400">
    <polyline points="9 18 15 12 9 6"></polyline>
  </svg></span> <span class="block overflow-scroll transition-max-height duration-500 ease-in-out max-h-0"><span class="block text-sm md:text-md mx-1">Something</span></span>
  <!---->
</ul>
`;

exports[`ZFooterList component renders a ZFooterList when type is none 1`] = `
<ul class="px-6 md:px-4 lg:px-6" title="Dummy title">
  <!----> <span class="block"><!----> <span class="text-vanilla-300">Something</span></span>
</ul>
`;

exports[`ZFooterList component renders a ZFooterList with horizontal arrangement 1`] = `
<ul class="px-6 md:px-4 lg:px-6">
  <!----> <span class="block"><!----> <span class="text-vanilla-300 flex flex-wrap"></span></span>
</ul>
`;
